[tool.poetry]
name = "pylance_test"
version = "0.1.0"
description = "Testing if pylance stub resolution works"
authors = ["Pascal Thomet <pthomet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lg-hello-imgui = { git = "https://github.com/pthom/lg_hello_imgui.git", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
