[tool.poetry]
name = "pylance_test"
version = "0.1.0"
description = "Testing if pylance stub resolution works"
authors = ["Pascal Thomet <pthomet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lg-imgui-bundle = { git = "https://github.com/pthom/lg_imgui_bundle.git", branch = "main" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
